force-app-privacy/main/default/objects/Masking_Rule__mdt/Masking_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Masking Rule</label>
    <pluralLabel>Masking Rules</pluralLabel>
</CustomObject>