force-app-privacy/main/default/objects/Masking_Rule__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>The field API name this rule applies to (e.g. Email, Phone, Description__c).</description>
    <label>Field API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>