force-app-privacy/main/default/objects/Masking_Rule__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When false, the rule is ignored by MaskingStrategyRegistry.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>