force-app-privacy/main/default/objects/Masking_Rule__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>The SObject API name this rule applies to (e.g. Contact, Account, My_Object__c).</description>
    <label>Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>