force-app-privacy/main/default/objects/Masking_Rule__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Determines the order in which multiple rules for the same {Object, Field} are applied. Lower values run first. Blank orders run last.</description>
    <label>Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>