force-app-privacy/main/default/objects/Masking_Rule__mdt/fields/Parameters_JSON__c.field-meta.xml
<CustomField>
    <fullName>Parameters_JSON__c</fullName>
    <description>Optional strategy-specific parameters as a JSON object, e.g. {"libraryName":"FIRST_NAME"} or {"length":12,"prefix":"H_"}.</description>
    <label>Parameters JSON</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>