force-app-privacy/main/default/objects/Masking_Rule__mdt/fields/Strategy_Class__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Class__c</fullName>
    <description>Fully qualified Apex class name implementing MaskingStrategy (e.g. HashStrategy, LibraryStrategy, or a custom user-authored class).</description>
    <label>Strategy Class</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>